--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: home
 ---
 
 <p>
@@ -44,9 +44,6 @@ Links:
 </UL>
 <h2 id="pubs">Publications</h2>
 <p>
-Visit my
-<a href="https://users.ncsa.illinois.edu/jbasney/acm-author-izer.html">ACM Author-izer Page</a>
-for free access to my ACM publications.
 Please contact me for a free copy of any publication listed below.
 <ul>
 <li>Jim Basney, Phuong Cao, and Terry Fleury, "Investigating Root
