--- a/index.html
+++ b/index.html
@@ -540,6 +540,7 @@ November 2011.
 "An Analysis of the Benefits and Risks to LIGO When Participating in
 Identity Federations,"
 October 2011.
+  <a href="https://dcc.ligo.org/LIGO-G1100964/public">https://dcc.ligo.org/LIGO-G1100964/public</a>
 <a href="https://dcc.ligo.org/public/0070/G1100964/002/LIGOIdentityFederationRiskAnalysis.pdf">[pdf]</a>
 <li>Randy Butler, Von Welch, Jim Basney, Scott Koranda, William
 Barnett, and Doug Pearson,
