--- a/index.html
+++ b/index.html
@@ -1340,21 +1340,19 @@ Source: National Science Foundation award number
 <h2>Previous Projects</h2>
 <UL>
 <li><a href="http://grid.ncsa.illinois.edu/dependable/">Dependable Grids</a>
-<li><a href="http://www.sciencegatewaysecurity.org/">Distributed Web
-Security for Science Gateways</a>
+<li>Distributed Web Security for Science Gateways
 <li><a href="https://sites.google.com/site/fedushare/">FeduShare</a>
 <li>Grid in a Box
-<li><a href="http://gridshib.globus.org/">GridShib</a>
+<li>GridShib
 <li><a href="http://gridshibca.cilogon.org/">GridShib CA</a>
 <li><a href="https://github.com/jbasney/mech_saml_ec">GSS-API SAML EC</a>
-<li><a href="http://www.illinois.gov/security/ittf/">Illinois Terrorism Task Force</a> Secure Credentialing Project 
+<li>Illinois Terrorism Task Force Secure Credentialing Project 
 <li><a href="https://www.lsst.org/">Large Synoptic Survey Telescope</a> (LSST)
 <li><a href="https://ligo.org/">Laser Interferometer Gravitational-Wave Observatory</a> (LIGO)
 <li><a href="http://security.ncsa.uiuc.edu/research/mithril/">Mithril</a>: Adaptable Security for Survivability in Collaborative Computing Sites
 <li>NASA IPG
 <li>NCASSR Credential Management Services
-<li><a href="http://www.ncassr.org/project/index.php?id=57">NCASSR
-Cyber Terrorism/Crime Investigation Framework</a>
+<li>NCASSR Cyber Terrorism/Crime Investigation Framework
 <li>NCASSR PKI Testbed
 <li>NCASSR PKI and CKM Scaling Study
 <li>Observatory Middleware Framework
@@ -1362,8 +1360,8 @@ Cyber Terrorism/Crime Investigation Framework</a>
 <li><a href="http://www.opensciencegrid.org/">Open Science Grid</a>
 <li><a href="https://rokwire.org/">Rokwire</a>
 <li><a href="http://sacred.sf.net/">SACRED Credential Repository</a>
-<li><a href="http://sels.ncsa.uiuc.edu/">Secure Email List Service</a>
+<li>Secure Email List Service (SELS)
 <li><a href="https://continuousassurance.org/">Software Assurance Marketplace</a> (SWAMP)
 <li><a href="http://grid.ncsa.illinois.edu/test/">TestGrid</a> (<a href="http://grid.ncsa.illinois.edu/test/grid-status-test/">Grid Status Test Script</a>)
-<li><a href="http://www.ncsa.illinois.edu/Projects/teragrid.html">TeraGrid</a>
+<li>TeraGrid
 </UL>
