--- a/index.html
+++ b/index.html
@@ -1345,11 +1345,13 @@ Source: National Science Foundation award number
 <li>Grid in a Box
 <li>GridShib
 <li><a href="http://gridshibca.cilogon.org/">GridShib CA</a>
+<li><a href="http://grid.ncsa.illinois.edu/ssh/">GSI-OpenSSH</a>
 <li><a href="https://github.com/jbasney/mech_saml_ec">GSS-API SAML EC</a>
 <li>Illinois Terrorism Task Force Secure Credentialing Project 
 <li><a href="https://www.lsst.org/">Large Synoptic Survey Telescope</a> (LSST)
 <li><a href="https://ligo.org/">Laser Interferometer Gravitational-Wave Observatory</a> (LIGO)
 <li><a href="http://security.ncsa.uiuc.edu/research/mithril/">Mithril</a>: Adaptable Security for Survivability in Collaborative Computing Sites
+<li><a href="http://grid.ncsa.illinois.edu/myproxy/">MyProxy Credential Management Service</a>
 <li>NASA IPG
 <li>NCASSR Credential Management Services
 <li>NCASSR Cyber Terrorism/Crime Investigation Framework
