--- a/index.html
+++ b/index.html
@@ -1172,7 +1172,7 @@ April 2010.
 May 8, 2002.
 <a href="https://users.ncsa.illinois.edu/jbasney/aah02.pdf">[pdf]</a>
 </ul>
-<h2>Funded Research</h2>
+<h2 id="funding">Funded Research</h2>
 <p>
 Please contact me for a copy of the grant proposal for any project listed below.
 See also:
@@ -1289,7 +1289,7 @@ Amount: $598,343.
 Source: National Science Foundation award number
 <a href="http://www.nsf.gov/awardsearch/showAward.do?AwardNumber=0222571">0222571</a>.
 </ul>
-<h2>Service</h2>
+<h2 id="service">Service</h2>
 <ul>
 <li>National Science Foundation Funding Panel Review Member:
   2004, 2005, 2018, 2019
