--- a/index.html
+++ b/index.html
@@ -40,12 +40,19 @@ Twitter: <a href="https://twitter.com/JimBasney">@JimBasney</a><br>
 <p>
 Please contact me for a free copy of any publication listed below.
 <ul>
+<li>Isuru Ranawaka, Samitha Liyanage, Dannon Baker, Alexandru Mahmoud, Juleen Graham, Terry Fleury, 
+  Dimuthu Wannipurage, Yu Ma, Enis Afgan, Jim Basney, Suresh Marru, and Marlon Pierce. 2021. 
+  Science Gateway Integration Examples with the Custos Security Service.
+  8th International Workshop on HPC User Support Tools
+  (<a href="https://hust-workshop.github.io/">HUST</a>),
+  November 2021.
+  <a href="https://doi.org/10.5281/zenodo.5749727">https://doi.org/10.5281/zenodo.5749727</a>
 <li>Jim Basney, Phuong Cao, and Terry Fleury, "Investigating Root
   Causes of Authentication Failures Using a SAML and OIDC
   Observatory," IEEE 6th International Conference on Dependability in
   Sensor, Cloud and Big Data Systems and Applications
   (<a href="http://www.ieee-cybermatics.org/2020/dependsys/">DependSys</a>),
-  December, 2020.
+  December 2020.
   <a href="https://doi.org/10.1109/DependSys51298.2020.00026">https://doi.org/10.1109/DependSys51298.2020.00026</a>
   <a href="https://github.com/cilogon/DependSys2020">[data]</a>
 <li>Isuru Ranawaka, Suresh Marru, Juleen Graham, Aarushi Bisht, Jim
