--- a/index.html
+++ b/index.html
@@ -14,15 +14,7 @@ Supercomputing Applications</a><BR>
 Urbana, Illinois 61801<br>
 <P>
 Email:
-<A HREF="mailto:jbasney@illinois.edu">jbasney@illinois.edu</A><BR>
-Office: 2006F NCSA Building
-(<a href="https://map.illinois.edu/view?skinId=0&ACTION=MAP&buildingId=564">campus map</a>,
-<a href="https://goo.gl/maps/VPzzucHPqrs">google map</a>,
-and
-<a href="https://www.ncsa.illinois.edu/about/facilities">facility info</a>)
-<BR>
-Phone: +1 217 244 1954
-<p>
+<a href="mailto:jbasney@illinois.edu">jbasney@illinois.edu</a><br>
 GitHub: <a href="https://github.com/jbasney/">jbasney</a><br>
 OpenPGP key: <a href="https://users.ncsa.illinois.edu/jbasney/0x52812B01FA8F67A9.txt">0x52812B01FA8F67A9</a><br>
 ORCID iD: <a href="https://orcid.org/0000-0002-0139-0640">https://orcid.org/0000-0002-0139-0640</a><br>
