--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@ Dublin, Ireland.
 International Symposium on Cluster, Cloud and Grid Computing
 (<a href="http://datasys.cs.iit.edu/events/CCGrid2014/">CCGrid</a>), 
 May 2014, Chicago, IL.
+<a href="https://doi.org/10.1109/CCGrid.2014.95">https://doi.org/10.1109/CCGrid.2014.95</a>
 <a href="https://hdl.handle.net/2022/17379">https://hdl.handle.net/2022/17379</a>
 <li>Jim Basney and Von Welch,
 "Science Gateway Security Recommendations,"
@@ -251,6 +252,7 @@ A. Nguyen-Tuong, A. Grimshaw and M. Humphrey,
 to Intrusion Detections,"
 High Performance Computation Conference (<a href="http://www.tlc2.uh.edu/hpcc07/">HPCC 2007</a>), 
 Sept 26-28, 2007. Houston, TX.
+<a href="https://doi.org/10.1007/978-3-540-75444-2_29">https://doi.org/10.1007/978-3-540-75444-2_29</a>
 <a href="http://www.cs.virginia.edu/~humphrey/papers/ANDREA_GT4_HPCC2007.pdf">[pdf]</a>
 <li>
 Z. Hill, J. Rowanhill, A. Nguyen-Tuong, J. Basney, G. Wasson,
@@ -393,6 +395,7 @@ Orlando, FL, July 12-15, 2005.
 Integration of Pubcookie and MyProxy,"
 2005 International Conference on Computational Science (ICCS 2005), 
 Emory University, Atlanta, GA, May 22-25, 2005.
+<a href="https://doi.org/10.1007/11428831_62">https://doi.org/10.1007/11428831_62</a>
 <a href="http://www.cs.virginia.edu/~humphrey/papers/PubcookieMyproxy.pdf">[pdf]</a>
 <li>A. Grimshaw, M. Humphrey, J.C. Knight, A. Nguyen-Tuong, J. Rowanhill, G.
 Wasson, and J. Basney,
@@ -400,12 +403,14 @@ Wasson, and J. Basney,
 2005 Workshop on Dynamic Data Driven Applications (associated with the 2005
 International Conference on Computational Science). 
 Emory University, Atlanta, GA, May 22-25, 2005.
+<a href="https://doi.org/10.1007/11428848_94">https://doi.org/10.1007/11428848_94</a>
 <a href="http://www.cs.virginia.edu/~humphrey/papers/DevelopmentDependableSurvivableGrids.pdf">[pdf]</a>
 <li>Himanshu Khurana, Rafael Bonilla, Adam Slagell, Raja Afandi,
 Hyung-Seok Hahm, and Jim Basney, 
 "Scalable Group Key Management with Partially Trusted Controllers,"
 International Conference on Networking,
 Reunion Island, April 2005. 
+<a href="https://doi.org/10.1007/978-3-540-31957-3_75">https://doi.org/10.1007/978-3-540-31957-3_75</a>
 <li>Jim Basney, Shiva Shankar Chetan, Feng Qin, Sumin Song, Xiao Tu, and
 Marty Humphrey, "An OGSI CredentialManager Service," 
 Proceedings of the 
