--- a/index.html
+++ b/index.html
@@ -1192,7 +1192,7 @@ Award Search</a>
   Source: National Science Foundation award number <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2114989">2114989</a>.
   <a href="https://sciauth.org/sciauth-proposal-public.pdf">[pdf]</a>
 <li>PI: Von Welch,
-  Co-PIs: Barton Miller, James Basney, James Marsteller.
+  Co-PIs: Barton Miller, James Basney, Sean Peisert, Kelli Shute.
   Title: CICI: CCoE: Trusted CI: Advancing Trustworthy Science.
   Duration: October 2019 to September 2024.
   Amount: $12,486,560.
