--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ April 2006.
 "MyProxy Protocol,"
 Global Grid Forum Experimental Document GFD-E.54,
 November 26, 2005.
-<a href="http://www.ggf.org/documents/GFD.54.pdf">[pdf]</a>
+<a href="https://www.ogf.org/documents/GFD.54.pdf">[pdf]</a>
 <li>Daniel Kouril and Jim Basney,
 "A Credential Renewal Service for Long-Running Jobs," 
 6th IEEE/ACM International Workshop on Grid Computing
@@ -551,7 +551,7 @@ March 25, 2009.
 "Performance of Cryptographic Protocols for High-Performance,
 High-Bandwidth, High-Latency Grid Systems,"
 NCSA Technical Report, March 2007.
-<a href="http://www.ncsa.uiuc.edu/~hkhurana/GridCrypto.pdf">[pdf]</a>
+<a href="GridCrypto.pdf">[pdf]</a>
 <li>J. Rowanhill, Y. Kiryakov, J. Basney, D. Del Vecchio, G. Wasson,
 J. Knight, A. Nguyen-Tuong, A. Grimshaw and M. Humphrey.
 "Toward Dependable and Survivable Grids:
