--- a/index.html
+++ b/index.html
@@ -460,6 +460,8 @@ Arlington, Virginia, September 19-21, 2003.
 </ul>
 <h2 id="reports">Technical Reports</h2>
 <ul>
+<li>J. Dopheide, J. Zage, J. Basney, “Trusted CI Impacts Report”, March 2022. 
+  <a href="https://doi.org/10.5281/zenodo.6350540">https://doi.org/10.5281/zenodo.6350540</a>
 <li>Andrew Adams, Kay Avila, Jim Basney, Laura Christopherson, Melissa
   Cragin, Jeannette Dopheide, Terry Fleury, Calvin Frye, Florence
   Hudson, Manisha Kanodia, Jenna Kim, W. John MacMullen, Mats Rynge,
