--- a/index.html
+++ b/index.html
@@ -589,6 +589,9 @@ July 22, 2001.
 </ul>
 <h2 id="talks">Presentations</h2>
 <ul>
+<li>Panel: Federated Login,
+  <a href="https://tecc.en.computecanada.ca/">TECC</a>,
+  March 30, 2022.
 <li>Federated Identity and Access Management,
   SFSCon,
   November 6, 2021.
