--- a/index.html
+++ b/index.html
@@ -287,10 +287,10 @@ Volume 19, Issue 6, March 2007.
 <li>
 Himanshu Khurana and Jim Basney,
 "On the Risks of IBE,"
-Proceedings of the International Workshop on Applied PKC 
-(<a href="http://ssdut.dlut.edu.cn/iwap06/indexIwap.htm">IWAP</a>),
+Proceedings of the International Workshop on Applied PKC,
 Dalian, China, November 2006.
 <a href="IWAP06IBE.ppt">[ppt]</a>
+<a href="10.1.1.86.9742.pdf">[pdf]</a>
 <li>
 Himanshu Khurana, Jim Basney, Von Welch and Roy Campbell,
 "Operational Security Requirements for Large Collaborative Compute
