--- a/index.html
+++ b/index.html
@@ -295,10 +295,10 @@ Dalian, China, November 2006.
 Himanshu Khurana, Jim Basney, Von Welch and Roy Campbell,
 "Operational Security Requirements for Large Collaborative Compute
 Infrastructures,"
-International Workshop on Trusted Collaboration 
-(<a href="http://www.trustcol.org/">TrustCol</a>), 
+International Workshop on Trusted Collaboration, 
 in conjunction with CollaborateCom,
 Atlanta, November 2006.
+<a href="https://doi.org/10.1109/COLCOM.2006.361884">https://doi.org/10.1109/COLCOM.2006.361884</a>
 <li>
 Terry Fleury, Jim Basney, and Von Welch,
 "Single Sign-On for Java Web Start Applications Using MyProxy,"
@@ -321,6 +321,7 @@ Computing Sites,"
 Workshop on Enterprise Network Security (WENS), 
 in conjunction with SecureComm, 
 September 2006.
+<a href="https://doi.org/10.1109/SECCOMW.2006.359560">https://doi.org/10.1109/SECCOMW.2006.359560</a>
 <li>
 R. Butler, M. Servilla, S. Gage, J. Basney, V. Welch,
 B. Baker, T. Fleury, P. Duda, D. Gehrig, M. Bletzinger, J. Tao, 
