--- a/index.html
+++ b/index.html
@@ -1337,6 +1337,7 @@ Source: National Science Foundation award number
   <a href="https://www.xsede.org/xsede16">XSEDE16</a>,
   <a href="http://www.pearc.org">PEARC17</a>,
   <a href="http://event.twgrid.org/isgc2020/">ISGC 2020</a>,
-  <a href="https://pearc.hosting2.acm.org/pearc20/">PEARC20</a>
+  <a href="https://pearc.hosting2.acm.org/pearc20/">PEARC20</a>,
+  <a href="https://indico4.twgrid.org/event/20/">ISGC 2022</a>
 </ul>
 
