--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@ Dublin, Ireland.
 <li>Thejaka Amila Kanewala, Suresh Marru, Jim Basney, and Marlon Pierce,
 "A Credential Store for Multi-Tenant Science Gateways,"
 International Symposium on Cluster, Cloud and Grid Computing
-(<a href="http://datasys.cs.iit.edu/events/CCGrid2014/">CCGrid</a>), 
+(CCGrid), 
 May 2014, Chicago, IL.
 <a href="https://doi.org/10.1109/CCGrid.2014.95">https://doi.org/10.1109/CCGrid.2014.95</a>
 <a href="https://hdl.handle.net/2022/17379">https://hdl.handle.net/2022/17379</a>
 <li>Jim Basney and Von Welch,
 "Science Gateway Security Recommendations,"
-<a href="http://sciencegateways.org/upcoming-events/ieee-workshop-september-2013/">Science Gateway Institute Workshop</a>,
+Science Gateway Institute Workshop,
 September 2013, Indianapolis, IN.
 <a href="https://doi.org/10.1109/CLUSTER.2013.6702697">https://doi.org/10.1109/CLUSTER.2013.6702697</a>
 <a href="201309-gwsec.pdf">[pdf]</a>
@@ -142,7 +142,7 @@ September 2013, Indianapolis, IN.
 <li>Jim Basney, Terry Fleury, and Jeff Gaynor,
 "CILogon: A Federated X.509 Certification Authority for
 CyberInfrastructure Logon,"
-<a href="https://www.xsede.org/xsede13">XSEDE Conference</a>,
+XSEDE Conference<,
 July 2013, San Diego, CA.
 <a href="https://doi.org/10.1145/2484762.2484791">https://doi.org/10.1145/2484762.2484791</a>
 (Best Technology Paper)
@@ -154,21 +154,21 @@ July 2013, San Diego, CA.
 <li>Jim Basney, Rion Dooley, Jeff Gaynor, Suresh Marru, and Marlon Pierce,
 "Distributed Web Security for Science Gateways,"
 Gateway Computing Environments Workshop
-(<a href="http://www.collab-ogce.org/gce11/">GCE11</a>),
+(GCE11),
 November 17, 2011, Seattle, WA.
 <a href="https://doi.org/10.1145/2110486.2110489">https://doi.org/10.1145/2110486.2110489</a>
 <li>
 Jim Basney and Jeff Gaynor,
 "An OAuth Service for Issuing Certificates to Science Gateways for
 TeraGrid Users,"
-<a href="http://www.teragrid.org/tg11">TeraGrid Conference</a>,
+TeraGrid Conference,
 July 18-21, 2011, Salt Lake City, UT.
 <a href="https://doi.org/10.1145/2016741.2016776">https://doi.org/10.1145/2016741.2016776</a>
 <a href="tg11-gateway-oauth-basney.pptx">[slides]</a>
 <li>
 Jim Basney, Von Welch, and Nancy Wilkins-Diehr,
 "TeraGrid Science Gateway AAAA Model: Implementation and Lessons Learned,"
-<a href="http://www.teragrid.org/tg10">TeraGrid Conference</a>,
+TeraGrid Conference,
 August 2-5, 2010, Pittsburgh, PA.
 <a href="https://doi.org/10.1145/1838574.1838576">https://doi.org/10.1145/1838574.1838576</a>
 (Best Paper: Gateways Track)
@@ -177,7 +177,7 @@ August 2-5, 2010, Pittsburgh, PA.
 Jim Basney, Terry Fleury, and Von Welch,
 "Federated Login to TeraGrid,"
 9th Symposium on Identity and Trust on the Internet
-(<a href="http://middleware.internet2.edu/idtrust/2010/">IDtrust 2010</a>),
+(IDtrust 2010),
 Gaithersburg, MD, April 2010.
 <a href="https://doi.org/10.1145/1750389.1750391">https://doi.org/10.1145/1750389.1750391</a>
 <a href="tgfed-slides.pdf">[slides]</a>
@@ -250,7 +250,7 @@ J. Rowanhill, G. Wasson, Z. Hill, J. Basney, Y. Kiryakov, J. Knight,
 A. Nguyen-Tuong, A. Grimshaw and M. Humphrey,
 "Dynamic System-wide Reconfiguration of Grid Deployments in Response
 to Intrusion Detections,"
-High Performance Computation Conference (<a href="http://www.tlc2.uh.edu/hpcc07/">HPCC 2007</a>), 
+High Performance Computation Conference (HPCC 2007), 
 Sept 26-28, 2007. Houston, TX.
 <a href="https://doi.org/10.1007/978-3-540-75444-2_29">https://doi.org/10.1007/978-3-540-75444-2_29</a>
 <a href="http://www.cs.virginia.edu/~humphrey/papers/ANDREA_GT4_HPCC2007.pdf">[pdf]</a>
@@ -273,7 +273,7 @@ Sept 19-21, 2007.
 <li>
 Jim Basney and Patrick Duda,
 "Clustering the Reliable File Transfer Service,"
-<a href="http://www.union.wisc.edu/teragrid07/">TeraGrid Conference</a>, 
+TeraGrid Conference, 
 Madison, WI, June 4-8, 2007.
 <a href="rrft.pdf">[pdf]</a>
 <a href="rrft.ppt">[ppt]</a>
@@ -338,7 +338,7 @@ Adam J. Lee, Marianne Winslett, Jim Basney, and Von Welch,
 "Traust: A Trust Negotiation-Based Authorization Service for Open
 Systems," 
 The Eleventh ACM Symposium on Access Control Models and Technologies
-(<a href="http://www.sacmat.org/">SACMAT</a>), June 2006.
+(SACMAT), June 2006.
 <a href="https://doi.org/10.1145/1133058.1133066">https://doi.org/10.1145/1133058.1133066</a>
 <li>
 A. J. Lee, M. Winslett, J. Basney, and V. Welch, "Traust: A Trust
@@ -351,8 +351,7 @@ Welch, Rachana Ananthakrishnan, Bill Baker, Monte Goode, and Kate
 Keahey,
 "Identity Federation and Attribute-based Authorization through
 the Globus Toolkit, Shibboleth, Gridshib, and MyProxy,"
-<a href="http://middleware.internet2.edu/pki06/">5th Annual PKI
-R&amp;D Workshop</a>, 
+5th Annual PKI R&amp;D Workshop, 
 April 2006.
 <a href="gridshib-pki06-final.pdf">[pdf]</a>
 <li>Jim Basney,
@@ -363,7 +362,7 @@ November 26, 2005.
 <li>Daniel Kouril and Jim Basney,
 "A Credential Renewal Service for Long-Running Jobs," 
 6th IEEE/ACM International Workshop on Grid Computing
-(<a href="http://pat.jpl.nasa.gov/public/grid2005/">Grid 2005</a>),
+(Grid 2005),
 Seattle, WA, November 13-14, 2005.
 <a href="proxy-renewal.pdf">[pdf]</a>
 <li>Bruce Beckles, Von Welch, and Jim Basney,
@@ -374,20 +373,19 @@ Volume 63, Issues 1-2, July 2005, pages 74-101.
 <a href="https://doi.org/10.1016/j.ijhcs.2005.04.017">https://doi.org/10.1016/j.ijhcs.2005.04.017</a>
 <li>Jim Basney, Marty Humphrey, and Von Welch,
 "The MyProxy Online Credential Repository,"
-<a href="http://www3.interscience.wiley.com/cgi-bin/jhome/1752">Software: Practice and Experience</a>, Volume 35, Issue 9, July 2005,
+Software: Practice and Experience, Volume 35, Issue 9, July 2005,
 pages 801-816.
 <a href="https://doi.org/10.1002/spe.688">https://doi.org/10.1002/spe.688</a>
 <a href="myproxy-spe.pdf">[pdf]</a>
 <li>Marty Humphrey, Jim Basney, and Jim Jokl,
 "The case for using Bridge Certificate Authorities for Grid Computing,"
-<a href="http://www3.interscience.wiley.com/cgi-bin/jhome/1752">Software: Practice and Experience</a>, Volume 35, Issue 9, July 2005,
+Software: Practice and Experience, Volume 35, Issue 9, July 2005,
 pages 817-826.
 <a href="https://doi.org/10.1002/spe.689">https://doi.org/10.1002/spe.689</a>
 <li>D. Del Vecchio, J. Basney, N. Nagaratnam, and M. Humphrey,
 "CredEx: User-Centric Credential Selection and Management for Grid and
 Web Services,"
-Proceedings of the 2005 IEEE International Conference on Web Services
-(<a href="http://conferences.computer.org/icws/2005/">ICWS 2005</a>),
+Proceedings of the 2005 IEEE International Conference on Web Services (ICWS 2005),
 Orlando, FL, July 12-15, 2005.
 <a href="https://doi.org/10.1109/ICWS.2005.43">https://doi.org/10.1109/ICWS.2005.43</a>
 <li>Jonathan Martin, Jim Basney, and Marty Humphrey,
@@ -414,11 +412,10 @@ Reunion Island, April 2005.
 <li>Jim Basney, Shiva Shankar Chetan, Feng Qin, Sumin Song, Xiao Tu, and
 Marty Humphrey, "An OGSI CredentialManager Service," 
 Proceedings of the 
-<a href="http://www.e-science.ox.ac.uk/events/security-workshop/">Workshop on Grid Security Practice and Experience</a>
+Workshop on Grid Security Practice and Experience
 (UK e-Science Security Task Force), Oxford, 8-9 July 2004.
 Published as: University of York Department of Computer Science
-Technical Report 
-<a href="http://www.cs.york.ac.uk/ftpdir/reports/YCS-2004-380.pdf">YCS-2004-380</a>.
+Technical Report YCS-2004-380.
 <a href="OGSICM.pdf">[pdf]</a>
 <a href="OGSICM.ppt">[ppt]</a>
 <li>Mehran Ahsant, Jim Basney, and Olle Mulmo,
@@ -454,8 +451,7 @@ Chicago, Illinois, April 19-22, 2004.
 <li>Jim Basney, William Yurcik, Rafael Bonilla, and Adam Slagell, "The
 Credential Wallet: A Classification of Credential Repositories
 Highlighting MyProxy," 31st Research Conference on Communication,
-Information and Internet Policy
-(<a href="http://www.tprc.org/tprc03/2003.htm">TPRC 2003</a>),
+Information and Internet Policy (TPRC 2003),
 Arlington, Virginia, September 19-21, 2003.
 <a href="credentialwalletTPRC.pdf">[pdf]</a>
 </ul>
@@ -555,14 +551,6 @@ March 25, 2009.
 High-Bandwidth, High-Latency Grid Systems,"
 NCSA Technical Report, March 2007.
 <a href="GridCrypto.pdf">[pdf]</a>
-<li>J. Rowanhill, Y. Kiryakov, J. Basney, D. Del Vecchio, G. Wasson,
-J. Knight, A. Nguyen-Tuong, A. Grimshaw and M. Humphrey.
-"Toward Dependable and Survivable Grids:
-Use of ANDREA to Manage Large-Scale Globus Deployments,"
-University of Virginia Department of Computer Science Technical
-Report,
-January 2006.
-<a href="http://www.cs.virginia.edu/~humphrey/papers/ANDREA_GT4.pdf">[pdf]</a>
 <li>Jim Basney, Roy Campbell, Himanshu Khurana, Von Welch,
 "Towards Operational Security for GENI,"
 GENI Design Document 06-10, July 2006.
@@ -710,8 +698,7 @@ July 22, 2001.
   September 12, 2019.
 <li>Panel: Securing your Infrastructure in a Changing Landscape: An
   Engineering Perspective,
-  <a href="https://ucsd-prp.gitlab.io/events/workshop-2019-srd/">Securing
-    Research Data Workshop</a>,
+  Securing Research Data Workshop,
   August 22, 2019.
 <li>National Research Resources: CILogon,
   <a href="https://meetings.internet2.edu/2019-basecamp/">InCommon BaseCAMP</a>,
@@ -843,7 +830,6 @@ October 4, 2015.
 <li>Case Studies - InCommon Certificate Service,
 <a href="http://www.incommon.org/iamonline">IAM Online</a>,
 July 8, 2015.
-<a href="https://www.incommon.org/docs/iamonline/20150708_IAMOnline.pdf">[pdf]</a>
 <li><a href="http://www.slideshare.net/jbasney/cilogon-globusworld2015">CILogon and InCommon: Technical Update</a>,
 <a href="https://www.globusworld.org/">GlobusWorld</a>,
 April 14, 2015.
@@ -858,15 +844,13 @@ September 2014.
 <li>Good Federation Citizenship,
 <a href="http://www.incommon.org/iamonline">IAM Online</a>,
 May 28, 2014.
-<a href="http://www.incommon.org/docs/iamonline/20140528_IAMOnline.pdf">[pdf]</a>
 <li>CILogon,
 Middleware And Grid Interagency Coordination (MAGIC) meeting,
 November 20, 2013.
 <a href="https://sites.google.com/a/cilogon.org/www-classic/docs/sc13-magic-cilogon.pptx">[pptx]</a>
 <a href="https://sites.google.com/a/cilogon.org/www-classic/docs/sc13-magic-cilogon.pdf">[pdf]</a>
 <li>InCommon & CILogon: Federated Identities Supporting Science,
-<a href="http://www.redclara.net/indico/evento/DV_FederacionIdentidad">RedCLARA
-Federations Virtual Day</a>,
+RedCLARA Federations Virtual Day,
 Jun 19, 2013.
 <a href="2013-06-basney-redclara.pptx">[pptx]</a>
 <a href="2013-06-basney-redclara.pdf">[pdf]</a>
@@ -918,7 +902,7 @@ Feburary 17, 2012.
 <a href="20120217-basney-gateways.pptx">[pptx]</a>
 <a href="20120217-basney-gateways.pdf">[pdf]</a>
 <li>Distributed Web Security for Science Gateways,
-<a href="http://www.cacr.iu.edu/events/past/268">IU CACR Security Seminar</a>,
+IU CACR Security Seminar,
 February 2, 2012.
 <a href="201202-cacr-basney.pptx">[pptx]</a>
 <a href="201202-cacr-basney.pdf">[pdf]</a>
@@ -984,7 +968,7 @@ November 2, 2010.
 <a href="https://sites.google.com/a/cilogon.org/www-classic/docs/20101102-nonwebapps-basney.pdf">[pdf]</a>
 <li>CILogon: Campus Authentication to CyberInfrastructure,
 TAGPMA 
-<a href="http://indico.rnp.br/conferenceProgram.py?confId=85">Symposium on Authentication Technologies for Research and Education</a>,
+Symposium on Authentication Technologies for Research and Education,
 October 4, 2010.
 <a href="https://sites.google.com/a/cilogon.org/www-classic/docs/20101004.pptx">[pptx]</a>
 <li>Federated Incident Response,
@@ -1010,8 +994,7 @@ October 15, 2008.
 <a href="basney-fall2008i2mm.pdf">[pdf]</a>
 <li>TeraGrid Science Gateways: Scaling TeraGrid Access,
 Information Assurance for the Grid: Crossing boundaries between stakeholders,
-<a href="http://www.allhands.org.uk/2008/">UK e-Science 2008 All Hands
-Meeting</a> Workshop,
+UK e-Science 2008 All Hands Meeting Workshop,
 September 10, 2008.
 <a href="ahm2008.pdf">[abstract]</a>
 <a href="teragrid-gateways-ahm08.ppt">[ppt]</a>
@@ -1020,26 +1003,20 @@ September 10, 2008.
 August 4, 2008.
 <a href="basney-canterbury-08.ppt">[ppt]</a>
 <a href="basney-canterbury-08.pdf">[pdf]</a>
-<li><a href="http://www.educause.edu/CAMP081/Program/14173?PRODUCT_CODE=CAMP081/GS06">Federated Environments and Incident Response: The Worst
-of Both Worlds?</a>, 
-<a href="http://www.educause.edu/content.asp?SECTION_ID=306">CAMP:
-Bridging Security and Identity Management</a>,
+<li>Federated Environments and Incident Response: The Worst of Both Worlds?, 
+CAMP: Bridging Security and Identity Management</a>,
 February 15, 2008.
 <a href="basney-camp08.ppt">[ppt]</a>
 <li>MyProxy,
-<a href="http://www.ogf.org/OGF19/">OGF19</a>
-<a href="http://www.ogf.org/gf/event_schedule/index.php?id=602">Software
-Forum</a>,
+OGF19 Software Forum,
 January 31, 2007.
-<a href="http://www.ogf.org/OGF19/materials/602/MyProxy-OGF19.ppt">[ppt]</a>
 <li>MyProxy Introduction and Update,
-<a href="http://gridworld.com/live/42/events/42WDC06A/conference/tracksessions/Technology+Track+C/QMONYA04RJ14">MyProxy
-in the Globus Toolkit for Developers</a>,
-<a href="http://gridworld.com/live/42/">GridWorld 2006</a>,
+MyProxy in the Globus Toolkit for Developers,
+GridWorld 2006,
 September 12, 2006.
-<a href="http://www.ncsa.uiuc.edu/~jbasney/MyProxy-GW06.ppt">[ppt]</a>
+<a href="MyProxy-GW06.ppt">[ppt]</a>
 <li>Managing Credentials on the TeraGrid with MyProxy,
-<a href="http://teragrid.org/events/2006conference/">TeraGrid '06</a>,
+TeraGrid '06,
 June 14, 2006.
 <a href="MyProxy-TG06.ppt">[ppt]</a>
 <li>MyProxy: A Multi-Purpose Grid Authentication Service,
@@ -1059,8 +1036,7 @@ October 3, 2005.
 <a href="MyProxy-GGF15.ppt">[ppt]</a>
 <a href="MyProxy-GGF15.pdf">[pdf]</a>
 <li>Using the MyProxy Online Credential Repository,
-<a href="http://www.ncsa.uiuc.edu/Divisions/eot/Training/Events/Announcements/CI/6_MyProxy.html">
-Cyberinfrastructure Seminar Series</a>, September 6, 2005.
+NCSA Cyberinfrastructure Seminar Series, September 6, 2005.
 <a href="MyProxy-CSS05.ppt">[ppt]</a>
 <a href="MyProxy-CSS05.pdf">[pdf]</a>
 <li>MITHRIL: Adaptable Security for Survivability in Collaborative
@@ -1068,8 +1044,7 @@ Cyberinfrastructure Seminar Series</a>, September 6, 2005.
 <a href="Mithril.ppt">[ppt]</a>
 <a href="Mithril.pdf">[pdf]</a>
 <li>Managing Security Credentials,
-<a href="http://www.ncsa.uiuc.edu/Conferences/2005Meeting/">NCSA
-  Private Sector Program Annual Meeting</a>,
+NCSA Private Sector Program Annual Meeting,
 May 17, 2005.
 <li>Using the MyProxy Online Credential Repository,
 <a href="http://www.globusworld.org/">GlobusWORLD</a>,
@@ -1097,7 +1072,7 @@ Targeted Communities Workshop</a>,
 July 1, 2004.
 <a href="GRIDS-2004-Basney.pdf">[pdf]</a>
 <li>MyProxy NMI Integration,
-<a href="http://hpn.east.isi.edu/nsf-sci/">NSF SCI Division PI Meeting</a>,
+NSF SCI Division PI Meeting,
 February 19, 2004.
 <a href="nsf-sci-pi-myproxy.ppt">[ppt]</a>
 <a href="nsf-sci-pi-myproxy.pdf">[pdf]</a>
@@ -1108,7 +1083,7 @@ February 3, 2004.
 <a href="brazil-04-basney.ppt">[ppt]</a>
 <a href="brazil-04-basney.pdf">[pdf]</a>
 <li>Deploying the TeraGrid PKI,
-<a href="http://www.gridforumkorea.org/contents/en/conference/2003_winter/">Grid Forum Korea Winter Workshop</a>,
+Grid Forum Korea Winter Workshop,
 December 1, 2003.
 <a href="gfk-03-winter-basney.ppt">[ppt]</a>
 <a href="gfk-03-winter-basney.pdf">[pdf]</a>
@@ -1151,9 +1126,7 @@ NCSA Condor-G Academy, August 27, 2001.
 <h2 id="posters">Posters</h2>
 <ul>
 <li>Distributed Web Security for Science Gateways,
-<a href="http://cps-vo.org/group/satc/program">NSF
-Secure and Trustworthy Cyberspace (SaTC)
-Principal Investigators' Meeting</a>,
+NSF Secure and Trustworthy Cyberspace (SaTC) Principal Investigators' Meeting,
 November 2012.
 <a href="2012-SaTC-basney-poster.pdf">[pdf]</a>
 <li>CIlogon: Federated Logon to NSF Cyberinfrastructure,
@@ -1170,7 +1143,7 @@ April 2010.
 <a href="http://www.globusworld.org">GlobusWorld</a>, January 13, 2003.
 <a href="myproxy-poster-200301.pdf">[pdf]</a>
 <li>NCSA Grid Technologies Group.
-<a href="http://www.ncsa.uiuc.edu/Conferences/2002Meeting/aah-index.html">Alliance All-Hands Meeting</a>, 
+Alliance All-Hands Meeting, 
 May 8, 2002.
 <a href="aah02.pdf">[pdf]</a>
 </ul>
@@ -1295,49 +1268,11 @@ Source: National Science Foundation award number
 <ul>
 <li>National Science Foundation Funding Panel Review Member:
   2004, 2005, 2018, 2019
-<li>Program Committee Member: 
-  <a href="http://trust.mindswap.org/trustWorkshop/">ISWC 2004 Trust Workshop</a>,
-  <a href="http://cdr.cs.uiuc.edu/divo2004/">DIVO 2004</a>,
-  <a href="http://mgc2004.lncc.br/">MGC 2004</a>,
-  <a href="http://mgc2005.lncc.br/">MGC 2005</a>,
-  <a href="http://hpdc.lri.fr/">HPDC-15</a>,
-  <a href="http://www.dsn2006.org/WASR.html">WASR 2006</a>,
-  <a href="http://www.grid2006.org/">Grid 2006</a>,
-  <a href="http://mgc2006.lncc.br/">MGC 2006</a>,
-  <a href="http://www.cogkit.org/GCE06">GCE 2006</a>,
-  <a href="http://ccgrid07.lncc.br">CCGrid 2007</a>,
-  <a href="http://www.aina-conference.org/2007/">AINA 2007</a>,
-  <a href="http://www2007.org/">WWW 2007</a>,
-  <a href="http://www.ieeetcsc.org/young/doctoral07">2007 IEEE TCSC Doctoral Symposium</a>,
-  <a href="http://www.grid2007.org/">Grid 2007</a>,
-  <a href="http://sc07.supercomputing.org/">SC07</a>,
-  <a href="http://www.trustcomp.org/secoval/">SECOVAL 2007</a>,
-  <a href="http://mgc2007.lncc.br/">MGC 2007</a>,
-  <a href="http://www.aina-conference.org/2008/">AINA 2008</a>,
-  <a href="http://ccgrid2008.ens-lyon.fr/">CCGrid 2008</a>,
-  <a href="http://middleware.internet2.edu/idtrust/">IDtrust 2008</a>,
-  <a href="http://www.ieeetcsc.org/young/doctoral08">2008 IEEE TCSC Doctoral Symposium</a>,
-  <a href="http://sc08.supercomputing.org/">SC08</a>,
-  <a href="http://www.grid2008.org/">Grid 2008</a>,
-  <a href="http://mgc2008.lncc.br/">MGC 2008</a>,
-  <a href="http://grid.sjtu.edu.cn/ccgrid2009/">CCGrid 2009</a>,
-  <a href="http://mgc2009.lncc.br/">MGC 2009</a>,
-  <a href="http://sc10.supercomputing.org/">SC10</a>,
-  <a href="http://www.grid2010.org/">Grid 2010</a>,
-  <a href="http://mgc2010.lncc.br/">MGC 2010</a>,
-  <a href="http://www.hpdc.org/2011/">HPDC 2011</a>,
-  <a href="http://mgc2011.lncc.br/">MGC 2011</a>,
-  <a href="http://sc12.supercomputing.org/">SC12</a>,
-  <a href="https://www.xsede.org/xsede13">XSEDE13</a>,
-  <a href="http://sc13.supercomputing.org/">SC13</a>,
-  <a href="http://sc14.supercomputing.org/">SC14</a>,
-  <a href="https://www.xsede.org/xsede14">XSEDE14</a>,
-  <a href="http://cloud.siat.ac.cn/ccgrid2015/">CCGrid 2015</a>,
-  <a href="https://www.xsede.org/xsede15">XSEDE15</a>,
-  <a href="https://www.xsede.org/xsede16">XSEDE16</a>,
-  <a href="http://www.pearc.org">PEARC17</a>,
-  <a href="http://event.twgrid.org/isgc2020/">ISGC 2020</a>,
-  <a href="https://pearc.hosting2.acm.org/pearc20/">PEARC20</a>,
-  <a href="https://indico4.twgrid.org/event/20/">ISGC 2022</a>
+<li>Program Committee Member: ISWC 2004 Trust Workshop, DIVO 2004, MGC 2004,
+  MGC 2005, HPDC-15, WASR 2006, Grid 2006, MGC 2006, GCE 2006, CCGrid 2007, AINA 2007,
+  WWW 2007, 2007 IEEE TCSC Doctoral Symposium,
+  Grid 2007, SC07, SECOVAL 2007, MGC 2007, AINA 2008,
+  CCGrid 2008, IDtrust 2008, 2008 IEEE TCSC Doctoral Symposium,
+  SC08, Grid 2008, MGC 2008, CCGrid 2009, MGC 2009, SC10, Grid 2010, MGC 2010, HPDC 2011, MGC 2011,
+  SC12, XSEDE13, SC13, SC14, XSEDE14, CCGrid 2015, XSEDE15, XSEDE16, PEARC17, ISGC 2020, PEARC20, ISGC 2022
 </ul>
-
