--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ September 2014.
 Suresh Marru, Marlon Pierce, and Joe Stubbs,
 "Integrating Science Gateways with XSEDE Security: A Survey of
 Credential Management Approaches,"
-<a href="https://conferences.xsede.org/xsede14/">XSEDE Conference</a>,
+XSEDE Conference,
 July 2014, Atlanta, GA.
 <a href="https://doi.org/10.1145/2616498.2616559">https://doi.org/10.1145/2616498.2616559</a>
 <li>Rion Dooley, Joe Stubbs, and Jim Basney,
@@ -142,7 +142,7 @@ September 2013, Indianapolis, IN.
 <li>Jim Basney, Terry Fleury, and Jeff Gaynor,
 "CILogon: A Federated X.509 Certification Authority for
 CyberInfrastructure Logon,"
-XSEDE Conference<,
+XSEDE Conference,
 July 2013, San Diego, CA.
 <a href="https://doi.org/10.1145/2484762.2484791">https://doi.org/10.1145/2484762.2484791</a>
 (Best Technology Paper)
@@ -1004,7 +1004,7 @@ August 4, 2008.
 <a href="basney-canterbury-08.ppt">[ppt]</a>
 <a href="basney-canterbury-08.pdf">[pdf]</a>
 <li>Federated Environments and Incident Response: The Worst of Both Worlds?, 
-CAMP: Bridging Security and Identity Management</a>,
+CAMP: Bridging Security and Identity Management,
 February 15, 2008.
 <a href="basney-camp08.ppt">[ppt]</a>
 <li>MyProxy,
