--- a/index.html
+++ b/index.html
@@ -578,6 +578,8 @@ July 22, 2001.
 </ul>
 <h2 id="talks">Presentations</h2>
 <ul>
+<li>CILogon, MAGIC Meeting, April 6, 2022.
+  <a href="20220406-cilogon-magic.pdf">[pdf]</a>
 <li>Panel: Federated Login,
   <a href="https://tecc.en.computecanada.ca/">TECC</a>,
   March 30, 2022.
