--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@ July 22, 2001.
 <h2 id="talks">Presentations</h2>
 <ul>
 <li>CILogon, MAGIC Meeting, April 6, 2022.
-  <a href="20220406-cilogon-magic.pdf">[pdf]</a>
+  <a href="20220406-cilogon-magic.pdf">[slides]</a>
 <li>Panel: Federated Login,
   <a href="https://tecc.en.computecanada.ca/">TECC</a>,
   March 30, 2022.
