--- a/index.html
+++ b/index.html
@@ -444,9 +444,9 @@ International World Wide Web Conference, New York, May 2004.
 <li>Markus Lorch, Jim Basney, and Dennis Kafura,
 "A Hardware-secured Credential Repository for Grid PKIs,"
 4th IEEE/ACM International
-Symposium on Cluster Computing and the Grid
-(<a href="http://www-fp.mcs.anl.gov/ccgrid2004/">CCGrid2004</a>), 
+Symposium on Cluster Computing and the Grid (CCGrid2004), 
 Chicago, Illinois, April 19-22, 2004.
+<a href="https://doi.ieeecomputersociety.org/10.1109/CCGrid.2004.1336679">https://doi.ieeecomputersociety.org/10.1109/CCGrid.2004.1336679</a>
 <a href="myproxy-ccgrid2004.pdf">[pdf]</a>
 <li>Jim Basney, William Yurcik, Rafael Bonilla, and Adam Slagell, "The
 Credential Wallet: A Classification of Credential Repositories
