--- a/index.html
+++ b/index.html
@@ -591,11 +591,13 @@ July 22, 2001.
   and Authorization
   (<a href="https://sciauth.org/workshop/2021/">WoTBAn&amp;Az 2021</a>),
   October 18, 2021.
+  <a href="202110-cilogon-wlcg-tokens.pdf">[slides]</a>
 <li>The Future of Bearer Tokens, 
   <a href="https://opensciencegrid.org/events/Token-Transition-Workshop/">OSG
   Token Transition Workshop</a>, 
   October 14, 2021.
-  <a href="https://indico.fnal.gov/event/50597/contributions/225838/">[slides]</a>
+  <a href="20211014-Basney-OSG-Tokens.pdf">[slides]</a>
+  <a href="https://youtu.be/eDHl6RNJDjA">[video]</a>
 <li>SciAuth: Deploying Interoperable and Usable Authorization Tokens
   to Enable Scientific Collaborations, 
   <a href="https://www.trustedci.org/2021-summit-program">NSF
