--- a/index.html
+++ b/index.html
@@ -627,6 +627,7 @@ July 22, 2001.
   JWTs, and
   OAuth, <a href="https://indico.fnal.gov/event/47040/contributions/208457/">OSG
     All-Hands Meeting 2021</a>, March 3, 2021.
+  <a href="20210303-Basney.pdf">[slides]</a>
 <li>SciTokens: Federated Authorization for Distributed Scientific
   Computing, <a href="https://trustedci.org/webinars">Trusted CI
   Webinar</a>, January 25, 2021. 
