--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@ July 22, 2001.
   to Enable Scientific Collaborations, 
   <a href="https://www.trustedci.org/2021-summit-program">NSF
   Cybersecurity Summit</a>, October 12, 2021. 
-  <a href="https://sciauth.org/SciAuth-2021-NSF-Cybersecurity-Summit.pdf">[slides]</a>
+  <a href="SciAuth-2021-NSF-Cybersecurity-Summit.pdf">[slides]</a>
 <li>Bridging the Gap: Strategies to Enable Federated Access to
   SAML-shy Resources and Services,
   <a href="https://incommon.org/academy/camp-meetings/2021-camp-week/">InCommon
